@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+plugins/cflogger/cflogger.c: Slight error in last commit, turns out time table
+  can't use real time as primary key. Change database schema to format 3.
+  Upgrades directly from version 1 not run into the issue.
+Arvid Norlander 2009-01-23
+
 plugins/cflogger/cflogger.c: Clean out some of the messy and broken SQL (didn't
   use indexes, was missing important constraints and so on) in cflogger. This
   includes introducing a new version of the SQL schema used. The database will
